# django-msgraph-mail

./: .gitignore  README.md  setup.cfg
django-msgraph-mail/: backend.py  utils.py
