[metadata]
name = django-msgraph-mail
version = 0.1.0
description = Django email backend using Microsoft Graph API (Application permissions)
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your@email.com
license = MIT
license_file = LICENSE
url = https://github.com/yourusername/django-msgraph-mail
classifiers =
    Framework :: Django
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
    Django>=3.2
    requests>=2.25

[options.packages.find]
exclude =
    tests
    docs
